<resources>
    <string name="app_name">InstagramClone</string>
    <string name="signup">Don\'t have an account ? <b> Sign up</b></string>
    <string name="login">Have an account ? <b> Log in</b></string>
    <string name="email">Email</string>
    <string name="instagram">Instagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="email_or_username">Email or Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_favorite_sport">Please enter your favorite sport...</string>
    <string name="please_enter_a_profile_name">Please enter a profile name...</string>
    <string name="please_enter_your_bio">Please enter your bio...</string>
    <string name="please_enter_your_profession">Please enter your profession...</string>
    <string name="please_enter_your_hobbies">Please enter your hobbies...</string>
    <string name="update_info">Update info</string>
    <string name="please_enter_a_description_for_your_image">Please enter a description for your image...</string>
    <string name="share_image">Share image</string>
</resources>