<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/insta_gradient"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/instagram"
        android:text="@string/instagram"
        android:textColor="#FFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtLoginEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="#30ffffff"
        android:hint="@string/email_or_username"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstagram" />

    <EditText
        android:id="@+id/edtLoginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_button"
        android:text="Log in"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />

    <TextView
        android:id="@+id/txtSignupActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>